--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
+	<script>
+		//通过判断userAgent来确定是否是来自手机端的，如果是手机端的访问mobile的页面，否则访问pc端页面
+	function browserRedirect() {
+	    var sUserAgent = navigator.userAgent.toLowerCase();
+	    var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";
+	    var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";
+	    var bIsMidp = sUserAgent.match(/midp/i) == "midp";
+	    var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";
+	    var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";
+	    var bIsAndroid = sUserAgent.match(/android/i) == "android";
+	    var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
+	    var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
+	    if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){
+	        window.location.href="http://blog.csdn.net/lmj623565791";
+	    } else {
+			window.location.href="http://m.blog.csdn.net/blog/index?username=lmj623565791";
+		}
+	}
+//	browserRedirect();
+</script>
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
 	</head>
 	<body>
-		<h1>你好我的git</h1>
+		<h1>你好我的git但事实上</h1>
+		<a href="http//:www.6685e.com">点击黄色</a>
+		<a href="www.baidu.com">点击</a>
 	</body>
 </html>
