--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	    var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
 	    var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
 	    if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) ){
-	        window.location.href="http://blog.csdn.net/lmj623565791";
+	        window.location.href="http://www.baidu.com";
 	    } else {
-			window.location.href="http://m.blog.csdn.net/blog/index?username=lmj623565791";
+			window.location.href="http://www.baidu.com";
 		}
 	}
 //	browserRedirect();
@@ -25,8 +25,8 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>你好我的git但事实上</h1>
-		<a href="http//:www.6685e.com">点击黄色</a>
-		<a href="www.baidu.com">点击</a>
+		<h1>给你不一样的精彩</h1>
+		<a href="http://www.6685e.com">点击黄色</a>
+		<a href="http://www.baidu.com">点击</a>
 	</body>
 </html>
